<?xml version="1.0" encoding="utf-8"?>
<!--

-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/paint_studio_intro_navigation"
        android:layout_width="match_parent"
        android:gravity="fill_vertical"
        android:layout_height="@dimen/paint_studio_welcome_navigation_height">

        <LinearLayout
            android:id="@+id/paint_studio_layout_dots"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/paint_studio_welcome_dots_height"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/paint_studio_btn_next"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/paint_studio_layout_dots"
            android:layout_alignParentEnd="true"
            android:text="@string/next"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/paint_studio_btn_skip"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/paint_studio_layout_dots"
            android:layout_alignParentStart="true"
            android:text="@string/skip"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <View
        android:id="@+id/paint_studio_intro_horizontal_line"
        android:layout_above="@id/paint_studio_intro_navigation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/paint_studio_color_picker_white"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/paint_studio_view_pager"
        android:layout_above="@id/paint_studio_intro_horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
