<?xml version="1.0" encoding="utf-8"?>
<!--

-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/paint_studio_welcome_margin_side"
    android:paddingStart="@dimen/paint_studio_welcome_margin_side"
    android:paddingTop="@dimen/paint_studio_welcome_margin_top">

    <TextView
        android:id="@+id/paint_studio_intro_started_head"
        style="@style/paint_studioWelcomeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:text="@string/enjoy_pocket_paint"/>

    <TextView
        android:id="@+id/paint_studio_intro_started_text"
        style="@style/paint_studioWelcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/paint_studio_intro_started_head"
        android:layout_marginTop="@dimen/paint_studio_welcome_margin_top_text"
        android:text="@string/intro_get_started"/>

</RelativeLayout>
