<?xml version="1.0" encoding="utf-8"?>
<!--

-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/paint_studio_welcome_margin_top">

    <TextView
        android:id="@+id/paint_studio_intro_landscape_head"
        style="@style/paint_studioWelcomeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/paint_studio_welcome_margin_side"
        android:layout_marginStart="@dimen/paint_studio_welcome_margin_side"
        android:minLines="2"
        android:text="@string/landscape" />

    <TextView
        android:id="@+id/paint_studio_intro_landscape_text"
        style="@style/paint_studioWelcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/paint_studio_intro_landscape_head"
        android:layout_marginEnd="@dimen/paint_studio_welcome_margin_side"
        android:layout_marginStart="@dimen/paint_studio_welcome_margin_side"
        android:layout_marginTop="@dimen/paint_studio_welcome_margin_top_text"
        android:text="@string/intro_landscape_text" />

</RelativeLayout>
