<?xml version="1.0" encoding="utf-8"?><!--

 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/paint_studio_outline_view_text_view"
            style="@style/paint_studioToolSubtitle"
            android:text="@string/dialog_brush_width_text" />

        <View
            android:id="@+id/paint_studio_outline_view_border"
            style="@style/paint_studioToolSectionDivider" />

        <LinearLayout
            style="@style/paint_studioToolSection"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/paint_studio_shape_stroke_width_seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="100" />

            <Space style="@style/paint_studioToolHorizontalSpace" />

            <EditText
                android:id="@+id/paint_studio_shape_outline_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minEms="3"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <TextView
            android:id="@+id/paint_studio_shape_tool_fill_outline"
            style="@style/paint_studioToolSubtitle"
            android:text="@string/shape_tool_dialog_fill_title" />

        <View style="@style/paint_studioToolSectionDivider" />

        <LinearLayout
            style="@style/paint_studioToolSection"
            android:layout_width="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/paint_studio_shape_ibtn_fill"
                style="@style/paint_studioSelectableButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/shape_tool_dialog_rect_title"
                app:srcCompat="@drawable/ic_paint_studio_rectangle" />

            <ImageButton
                android:id="@+id/paint_studio_shape_ibtn_outline"
                style="@style/paint_studioSelectableButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/shape_tool_dialog_outline_title"
                app:srcCompat="@drawable/ic_paint_studio_rectangle_out" />
        </LinearLayout>

        <TextView
            android:id="@+id/paint_studio_shape_tool_dialog_title"
            style="@style/paint_studioToolSubtitle"
            android:text="@string/shape_tool_dialog_rect_title" />

        <View style="@style/paint_studioToolSectionDivider" />

        <LinearLayout
            android:id="@+id/paint_studio_shapes_container"
            style="@style/paint_studioToolSection">

            <ImageButton
                android:id="@+id/paint_studio_shapes_square_btn"
                style="@style/paint_studioSelectableButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/shape_tool_dialog_rect_title"
                app:srcCompat="@drawable/ic_paint_studio_rectangle" />

            <ImageButton
                android:id="@+id/paint_studio_shapes_circle_btn"
                style="@style/paint_studioSelectableButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/shape_tool_dialog_ellipse_title"
                app:srcCompat="@drawable/ic_paint_studio_circle" />

            <ImageButton
                android:id="@+id/paint_studio_shapes_heart_btn"
                style="@style/paint_studioSelectableButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/shape_tool_dialog_heart_title"
                app:srcCompat="@drawable/ic_paint_studio_heart" />

            <ImageButton
                android:id="@+id/paint_studio_shapes_star_btn"
                style="@style/paint_studioSelectableButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/shape_tool_dialog_star_title"
                app:srcCompat="@drawable/ic_paint_studio_star" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
