<?xml version="1.0" encoding="utf-8"?>
<!--

 -->
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:focusableInTouchMode="true">

    <com.jdots.paint.ui.tools.BrushToolView
        android:id="@+id/paint_studio_brush_tool_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/paint_studioToolSubtitle"
        android:text="@string/dialog_brush_width_text" />

    <View style="@style/paint_studioToolSectionDivider"/>

    <LinearLayout
        style="@style/paint_studioToolSection">

        <SeekBar
            android:id="@+id/paint_studio_stroke_width_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="100"
            android:minHeight="30dip"/>

        <Space style="@style/paint_studioToolHorizontalSpace"/>

        <EditText
            android:id="@+id/paint_studio_stroke_width_width_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="3"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:saveEnabled="false"
            android:textColor="?attr/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"
            tools:text="100"
            android:importantForAutofill="no"/>
    </LinearLayout>

    <TextView
        style="@style/paint_studioToolSubtitle"
        android:text="@string/dialog_shape_text" />

    <View style="@style/paint_studioToolSectionDivider"/>

    <LinearLayout
        style="@style/paint_studioToolSection"
        android:layout_width="wrap_content"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/paint_studio_stroke_ibtn_circle"
            style="@style/paint_studioSelectableButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_paint_studio_tool_circle"
            android:contentDescription="@string/cap_circle" />

        <ImageButton
            android:id="@+id/paint_studio_stroke_ibtn_rect"
            style="@style/paint_studioSelectableButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_paint_studio_tool_square"
            android:contentDescription="@string/cap_square" />
    </LinearLayout>

    </LinearLayout>
</ScrollView>
